[v0.13.0.0] rorlab.gitbooks - 불레틴까지 완료

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,6 @@
-<h1>Welcome#index</h1>
-<p>이 페이지는 "RCafe 프로젝트" 의 Welcome 페이지입니다.</p>
+<h2>PJHDEV BLOG <small>에 오신 것을 환영합니다.</small></h2>
+<p>: 이 페이지는 "RCafe 프로젝트" 의 Welcome 페이지입니다.<br/></p>
+<%= link_to "글 작성", posts_path, class: 'btn btn-default' %>
 <div>
   <% if current_user %>
     Signed in as <strong><%= current_user.name %></strong>!
