[v0.13.0.0] 구글로그인 구현 및 로그인시에만 게시글 작성 가능하게 변경

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,10 @@
 <h2>PJHDEV BLOG <small>에 오신 것을 환영합니다.</small></h2>
-<p>: 이 페이지는 "RCafe 프로젝트" 의 Welcome 페이지입니다.<br/></p>
-<%= link_to "글 작성", posts_path, class: 'btn btn-default' %>
 <div>
   <% if current_user %>
     Signed in as <strong><%= current_user.name %></strong>!
-    <%= link_to "Sign out", signout_path, id: "sign_out" %>
+    <%= button_to "Sign out", signout_path, id: "sign_out", class: 'google-login' %>
   <% else %>
-    <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
+    <p>: <b>글 읽기 또는 작성을 위해 로그인을 해주세요.</b><br/></p>
+    <%= button_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in", class: 'google-login' %>
   <% end %>
 </div>
