--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,11 @@ $navbar-default-link-hover-bg: black;
 @import "bootstrap";
 
 body { padding-top: 60px; }
+
+.google-login {
+  width: 220px;
+  height: 50px;
+  background-image: asset-data-url('google.png');
+  background-repeat: no-repeat;
+  background-size: 40px;
+}
