--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,13 +21,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Rails<i>Cafe2</i></a>
+        <!--<a class="navbar-brand" href="/">Rails<i>Cafe2</i></a>-->
+        <%= link_to raw("PJHDEV<i>_BLOG</i>"), root_path, class:'navbar-brand' %>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li class="<%= params[:bulletin_id] == Bulletins::NOTICE ? 'active' : '' %>"><%= link_to I18n.t("bulletin.n#{Bulletins::NOTICE}"), bulletin_posts_path(Bulletins::NOTICE) %></li>
+          <li class="<%= params[:bulletin_id] == Bulletins::CHAT ? 'active' : '' %>"><%= link_to I18n.t("bulletin.n#{Bulletins::CHAT}"), bulletin_posts_path(Bulletins::CHAT) %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
             <ul class="dropdown-menu">
