--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -3,6 +3,11 @@
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :content, input_html: { rows: 10 } %>
+
+    <% if @post.bulletin.post_type == :gallery %>
+      <%= f.input :picture, as: :file %>
+      <%= f.hidden_field :picture_cache %>
+    <% end %>
   </div>
   <div class="form-actions">
     <%= f.button :submit , class: 'btn btn-default' %>
