--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,26 +1,1 @@
-<h2>Listing posts</h2>
-
-<table class="table">
-  <thead>
-  <tr>
-    <th>Title</th>
-    <th>Data actions</th>
-  </tr>
-  </thead>
-
-  <tbody>
-  <% @posts.each do |post| %>
-    <tr>
-      <td><%= post.title %></td>
-      <td>
-        <%= link_to 'Show', (@bulletin.present? ? [post.bulletin, post] : post), class: 'btn btn-default' %>
-        <%= link_to 'Edit', (@bulletin.present? ? edit_bulletin_post_path(post.bulletin, post) : edit_post_path(post)), class: 'btn btn-default' %>
-        <%= link_to 'Destroy', (@bulletin.present? ? [post.bulletin, post] : post), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default' %>
-      </td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
-
-
-<%= link_to 'New Post', (@bulletin.present? ?  new_bulletin_post_path(@bulletin) : new_post_path), class: 'btn btn-default' %>
+<%= render "posts/post_types/#{@bulletin.post_type}" %>
