[v0.1.0.0] comment, tag 추가

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,8 @@ $navbar-default-link-hover-bg: black;
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
-@import 'posts';
+@import "posts";
+@import "comments";
 
 body { padding-top: 60px; }
 
