--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -8,6 +8,8 @@
       <%= f.input :picture, as: :file %>
       <%= f.hidden_field :picture_cache %>
     <% end %>
+
+    <%= f.input :tag_list_fixed, placeholder: I18n.t("tag.placeholder") %>
   </div>
   <div class="form-actions">
     <%= f.button :submit , class: 'btn btn-default' %>
