--- a/app/views/posts/post_types/_bulletin.html.erb
+++ b/app/views/posts/post_types/_bulletin.html.erb
@@ -11,7 +11,7 @@
   <tbody>
   <% @posts.each do |post| %>
     <tr>
-      <td><%= post.title %></td>
+      <td><%= post.title %> <small>( <%= post.comments.size %> )</small></td>
       <td>
         <%= link_to 'Show', (@bulletin.present? ? [post.bulletin, post] : post), class: 'btn btn-default' %>
         <%= link_to 'Edit', (@bulletin.present? ? edit_bulletin_post_path(post.bulletin, post) : edit_post_path(post)), class: 'btn btn-default' %>
