--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,15 +9,23 @@
     <th>Content</th>
     <td><%= @post.content %></td>
   </tr>
-  <tr>
-    <th>Image</th>
-    <td class='image'><%= image_tag(@post.picture_url(:thumb)) if @post.picture? %></td>
-  </tr>
+  <% if @post.bulletin.post_type == :gallery %>
+    <tr>
+      <th>Image</th>
+      <td class='image'><%= image_tag(@post.picture_url(:thumb)) if @post.picture? %></td>
+    </tr>
+  <% end %>
   <tr>
     <th>Created at</th>
     <td><%= @post.created_at %></td>
+  </tr>
+  <tr>
+    <th>Tag list</th>
+    <td><%= tag_icons @post.tag_list %></td>
   </tr>
 </table>
 
 <%= link_to 'Edit', (@bulletin.present? ? edit_bulletin_post_path(@bulletin)  : edit_post_path(@post)), class: 'btn btn-default' %>
 <%= link_to 'List', (@bulletin.present? ? bulletin_posts_path(@bulletin) : posts_path), class: 'btn btn-default' %>
+
+<%= render "comments/comments" %>
