[v0.1.0.0] 이미지 페이징방식 처리 완료

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,9 @@ $navbar-default-link-hover-bg: black;
 @import "posts";
 @import "comments";
 
+// for infinite scroll
+@import "scaffolds";
+
 body { padding-top: 60px; }
 
 .google-login {
