--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,6 +1,95 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.posts.grid {
+  .grid-sizer,
+  .grid-item {
+    // default width (set to maximal columns within maxiaml screen width, 5 columns)
+    width: 19.281%;
+
+    @media screen and (min-width: 1150px)  {
+      // 5 columns
+      width: 19.281%;
+    }
+    @media screen and (min-width: 1057px) and (max-width: 1149px) {
+      // 5 columns
+      width: 19.213%;
+    }
+    @media screen and (min-width: 821px) and (max-width: 1056px)  {
+      // 4 columns
+      width: 24%;
+    }
+    @media screen and (min-width: 541px) and (max-width: 820px)  {
+      // 3 columns
+      width: 32%;
+    }
+    @media screen and (min-width: 517px) and (max-width: 540px)  {
+      // 2 column
+      width: 49%;
+    }
+    @media screen and (min-width: 410px) and (max-width: 516px)  {
+      // 2 column
+      width: 48.69%;
+    }
+    @media screen and (max-width: 409px) {
+      // 1 column
+      width: 100%;
+    }
+  }
+  .gutter-sizer {
+    width: 10px;
+  }
+
+  .grid-item {
+    background-color: rgba(#cdcdcd, 0.97);
+    border: 1px solid #858585;
+    border-radius: 4px;
+    box-sizing: border-box;
+    float: left;
+    margin-bottom: .5em;
+    padding: .5em;
+
+    &:hover {
+      border: 1px solid #fff;
+      box-shadow: 0 0 5px 5px rgba(0, 0, 0, .38);
+      transform: scale(1.001) rotate(2deg);
+    }
+    *:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.post-title {
+  color: #0e57b9;
+  font-weight: bold;
+  margin-bottom: .2em;
+}
+
+.post-content {
+  background-color: rgb(245, 245, 245);
+  border: 1px solid #ccc;
+  color: #999;
+  font-size: .9em;
+  padding: .5em;
+}
+
+.post-actions {
+  font-size: .8em;
+  margin-bottom: 0;
+  text-align: right;
+}
+
+a {
+  text-decoration: none;
+
+  &:hover {
+    color: inherit;
+    background-color: transparent;
+    text-decoration: underline;
+  }
+}
+
 .post {
   border: 1px solid $gray-light;
   border-radius: 5px;
