--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,25 @@
-<li>
-  <span class='label label-default'><%= post.try(:bulletin).try(:title) %></span>
-  <%= link_to post.title, [post.bulletin, post] %>
-  <%= time_ago_in_words(post.created_at) %> ago
-  <%= fa_icon('tags') + ' ' + tag_icons(post.tag_list) %>
-</li>
+<!-- infinite scroll 방식일 때 post 처리 방식 -->
+<% if params["bulletin_id"].to_i == Bulletins::GALLERY %>
+  <div class='post grid-item'>
+    <div class="post-title">
+      <%= post.title %>
+    </div>
+    <div class="post-content">
+      <%= post.content %>
+    </div>
+    <div class='image'><%= link_to(image_tag(post.picture_url(:thumb)), [post.bulletin, post]) if post.picture? %></div>
+    <div class='post-actions'>
+      <%= link_to fa_icon('eye'), [post.bulletin, post] %>
+      <%= link_to fa_icon('edit'), edit_bulletin_post_path(post.bulletin, post) %>
+      <%= link_to fa_icon('trash'), [post.bulletin, post], method: :delete, data: { confirm: 'Are you sure?' } %>
+    </div>
+  </div>
+<% else %>
+  <!-- tag 검색 될 때 post 처리 방식 -->
+  <li>
+    <span class='label label-default'><%= post.try(:bulletin).try(:title) %></span>
+    <%= link_to post.title, [post.bulletin, post] %>
+    <%= time_ago_in_words(post.created_at) %> ago
+    <%= fa_icon('tags') + ' ' + tag_icons(post.tag_list) %>
+  </li>
+<% end %>
