--- a/app/views/posts/post_types/_gallery.html.erb
+++ b/app/views/posts/post_types/_gallery.html.erb
@@ -1,22 +1,31 @@
 <h2><%= bulletin_name params[:bulletin_id] %> <small><%= link_to '설정', edit_bulletin_path(params[:bulletin_id])%></small></h2>
 
-<div class='gallery'>
-  <% @posts.each do | post | %>
+<%= link_to 'New Post', new_bulletin_post_path, class: 'btn btn-default' %>
+<br><br>
+
+<div class='posts grid'>
+  <div class='grid-sizer'></div>
+  <div class='gutter-sizer'></div>
+  <%= render @posts, :is_picture => true %>
+</div>
+
+<%= will_paginate @posts %>
+
+<!-- 일반 페이징 방식의 갤러리 -->
+<!--<div class='gallery'>
+  <%# @posts.each do | post | %>
     <div class='col-lg-3 col-md-3 col-xs-4 picture'>
-      <div class='image'><%= link_to(image_tag(post.picture_url(:thumb)), [post.bulletin, post]) if post.picture? %></div>
-      <div class='title'><%= post.title %><small>( <%= post.comments.size %> )</small></div>
-      <div class='content'><%= post.content %></div>
-      <% if post.tag_list.size > 0 %>
-        <div class='tag_list'><%= fa_icon('tags') + " " + tag_icons(post.tag_list) %></div>
-      <% end %>
+      <div class='image'><%#= link_to(image_tag(post.picture_url(:thumb)), [post.bulletin, post]) if post.picture? %></div>
+      <div class='title'><%#= post.title %><small>( <%#= post.comments.size %> )</small></div>
+      <div class='content'><%#= post.content %></div>
+      <%# if post.tag_list.size > 0 %>
+        <div class='tag_list'><%#= fa_icon('tags') + " " + tag_icons(post.tag_list) %></div>
+      <%# end %>
       <div class='actions'>
-        <%= link_to fa_icon('eye'), [post.bulletin, post] %>
-        <%= link_to fa_icon('edit'), edit_bulletin_post_path(post.bulletin, post) %>
-        <%= link_to fa_icon('trash'), [post.bulletin, post], method: :delete, data: { confirm: 'Are you sure?' } %>
+        <%#= link_to fa_icon('eye'), [post.bulletin, post] %>
+        <%#= link_to fa_icon('edit'), edit_bulletin_post_path(post.bulletin, post) %>
+        <%#= link_to fa_icon('trash'), [post.bulletin, post], method: :delete, data: { confirm: 'Are you sure?' } %>
       </div>
     </div>
-  <% end %>
-</div>
-<br>
-
-<%= link_to 'New Post', new_bulletin_post_path, class: 'btn btn-default' %>
+  <%# end %>
+</div>-->
