--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,6 +5,8 @@
     <%= button_to "Sign out", signout_path, id: "sign_out", class: 'google-login' %>
   <% else %>
     <p>: <b>글 읽기 또는 작성을 위해 로그인을 해주세요.</b><br/></p>
-    <%= button_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in", class: 'google-login' %>
+    <%= link_to "Login page", login_index_path %>
+    <!--<p>: <b>글 읽기 또는 작성을 위해 로그인을 해주세요.</b><br/></p>
+    <%#= button_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in", class: 'google-login' %>-->
   <% end %>
 </div>
