--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
       <%= csrf_meta_tags %>
   </head>
   <body>
+  <!--<div class="container">
+    <%#= video_tag "PUBG_INTRO_END.mp4", autoplay: :autoplay, loop: :loop, mute: :mute, class: "video" %>
+  </div>-->
   <!-- Fixed navbar -->
   <!-- div tag 는 페이지에서 논리적인 구분을 정의하는데 사용되는 태그이다.
        가상의 레이아웃을 설계하기 위히 사용되며 페이지의 레이아웃을 구분한다. -->
@@ -26,9 +29,14 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li class="<%= params[:bulletin_id] == Bulletins::NOTICE ? 'active' : '' %>"><%= link_to I18n.t("bulletin.n#{Bulletins::NOTICE}"), bulletin_posts_path(Bulletins::NOTICE) %></li>
-          <li class="<%= params[:bulletin_id] == Bulletins::CHAT ? 'active' : '' %>"><%= link_to I18n.t("bulletin.n#{Bulletins::CHAT}"), bulletin_posts_path(Bulletins::CHAT) %></li>
-          <li class="<%= params[:bulletin_id] == Bulletins::GALLERY ? 'active' : '' %>"><%= link_to I18n.t("bulletin.n#{Bulletins::GALLERY}"), bulletin_posts_path(Bulletins::GALLERY) %></li>
+          <li class="<%= params[:bulletin_id].to_i == Bulletins::NOTICE ? 'active' : '' %>"><%= link_to I18n.t("bulletin.n#{Bulletins::NOTICE}"), bulletin_posts_path(Bulletins::NOTICE) %></li>
+          <li class="<%= params[:bulletin_id].to_i == Bulletins::CHAT ? 'active' : '' %>"><%= link_to I18n.t("bulletin.n#{Bulletins::CHAT}"), bulletin_posts_path(Bulletins::CHAT) %></li>
+          <li class="<%= params[:bulletin_id].to_i == Bulletins::GALLERY ? 'active' : '' %>"><%= link_to I18n.t("bulletin.n#{Bulletins::GALLERY}"), bulletin_posts_path(Bulletins::GALLERY) %></li>
+          <% if current_user %>
+            <li ><%= link_to "Sign Out", signout_path, id: "sign_out", :method => :post %></li>
+          <% else %>
+            <li ><%= link_to "SNS LOGIN", login_index_path, :method => :get %></li>
+          <% end %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
             <ul class="dropdown-menu">
