--- a/app/views/posts/post_types/_gallery.html.erb
+++ b/app/views/posts/post_types/_gallery.html.erb
@@ -6,7 +6,7 @@
 <div class='posts grid'>
   <div class='grid-sizer'></div>
   <div class='gutter-sizer'></div>
-  <%= render @posts, :is_picture => true %>
+  <%= render @posts %>
 </div>
 
 <%= will_paginate @posts %>
