--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -27,5 +27,6 @@
 
 <%= link_to 'Edit', (@bulletin.present? ? edit_bulletin_post_path(@bulletin)  : edit_post_path(@post)), class: 'btn btn-default' %>
 <%= link_to 'List', (@bulletin.present? ? bulletin_posts_path(@bulletin) : posts_path), class: 'btn btn-default' %>
+<%= link_to 'Delete', [@post.bulletin, @post], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default' %>
 
 <%= render "comments/comments" %>
