--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,9 +33,9 @@
           <li class="<%= params[:bulletin_id].to_i == Bulletins::CHAT ? 'active' : '' %>"><%= link_to I18n.t("bulletin.n#{Bulletins::CHAT}"), bulletin_posts_path(Bulletins::CHAT) %></li>
           <li class="<%= params[:bulletin_id].to_i == Bulletins::GALLERY ? 'active' : '' %>"><%= link_to I18n.t("bulletin.n#{Bulletins::GALLERY}"), bulletin_posts_path(Bulletins::GALLERY) %></li>
           <% if current_user %>
-            <li ><%= link_to "Sign Out", signout_path, id: "sign_out", :method => :post %></li>
+            <li ><%= link_to "로그아웃", signout_path, id: "sign_out", :method => :post %></li>
           <% else %>
-            <li ><%= link_to "SNS LOGIN", login_index_path, :method => :get %></li>
+            <li ><%= link_to "로그인", login_index_path, :method => :get %></li>
           <% end %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
