--- a/app/views/posts/post_types/_blog.html.erb
+++ b/app/views/posts/post_types/_blog.html.erb
@@ -18,3 +18,6 @@
 <br>
 
 <%= link_to 'New Post', new_bulletin_post_path, class: 'btn btn-default' %>
+
+<!--klass 메소드는 변수가 가진 정보 중, 모델 이름을 추출해내는 메소드-->
+<%= render 'searches/search_form', post: @posts.klass %>
