--- a/app/views/posts/post_types/_bulletin.html.erb
+++ b/app/views/posts/post_types/_bulletin.html.erb
@@ -24,3 +24,6 @@
 
 
 <%= link_to 'New Post', (@bulletin.present? ?  new_bulletin_post_path(@bulletin) : new_post_path), class: 'btn btn-default' %>
+
+<!--klass 메소드는 변수가 가진 정보 중, 모델 이름을 추출해내는 메소드-->
+<%= render 'searches/search_form', post: @posts.klass %>
