--- a/app/views/posts/post_types/_gallery.html.erb
+++ b/app/views/posts/post_types/_gallery.html.erb
@@ -2,6 +2,8 @@
 
 <%= link_to 'New Post', new_bulletin_post_path, class: 'btn btn-default' %>
 <br><br>
+<!--klass 메소드는 변수가 가진 정보 중, 모델 이름을 추출해내는 메소드-->
+<%= render 'searches/search_form', post: @posts.klass %>
 
 <div class='posts grid'>
   <div class='grid-sizer'></div>
